--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ font in use: Poppins, PicNic, and Inclusive Sans
               月）。在十歲之際，我們將回到更實驗的精神持續探索藝術書展的更多可能，在此誠摯邀請您填寫本報名表時一併回覆
               2026 年度參展意願，跳上草率季的全新旅程！<br /><br />
 
-              展期將試進度優先公布予有意願參展的各位，場地、精彩亮點等資訊則於2025
+              展期將視進度優先公布予有意願參展的各位，場地、精彩亮點等資訊則於2025
               年草率季現場公布公開，敬請期待！
             </p>
             <br />
