--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -85,21 +85,28 @@
                   >
 
                   <span class="label">品牌名稱 Brand Name</span><br />
-                  <span style="font-size: 3rem">Yoshimi Saito</span>
+                  <span style="font-size: 3rem" id="brand-name"
+                    >Yoshimi Saito</span
+                  >
                 </td>
               </tr>
               <tr>
                 <td style="width: 50%">
-                  <span class="label">身份類別 Role</span><br />a1 Creator
+                  <span class="label">身份類別 Role</span><br /><span id="role"
+                    >a1 Creator</span
+                  >
                 </td>
                 <td style="width: 50%">
-                  <span class="label">作品類別 Category</span><br />b3 Drawings
+                  <span class="label">作品類別 Category</span><br /><span
+                    id="category"
+                    >b3 Drawings</span
+                  >
                 </td>
               </tr>
               <tr>
                 <td colspan="2">
                   <span class="label">品牌簡介 Bio</span><br />
-                  <div class="bio">
+                  <div class="bio" id="bio">
                     Yoshimi Saito is a Japanese artist and ceramicist. She is
                     known for her unique approach to ceramics, which combines
                     traditional techniques with a contemporary aesthetic. Her
@@ -137,7 +144,10 @@
                           border-bottom: none;
                         "
                       >
-                        <span class="label">國籍 Nationality</span><br />JAPAN
+                        <span class="label">國籍 Nationality</span><br /><span
+                          id="nationality"
+                          >JAPAN</span
+                        >
                       </td>
                       <td
                         style="
@@ -150,7 +160,7 @@
                         "
                       >
                         <span class="label">簽證申請 Visa Requirement</span
-                        ><br />Not Require
+                        ><br /><span id="visa-requirement">Not Require</span>
                       </td>
                     </tr>
                   </table>
@@ -161,40 +171,50 @@
                 <td rowspan="2">
                   <span class="label">代表人 Contact Person</span><br />
                   <div style="vertical-align: middle; font-size: 3rem">
-                    <span style="font-size: 2rem">王大明</span>
+                    <span style="font-size: 2rem" id="contact-person"
+                      >王大明</span
+                    >
                   </div>
                 </td>
 
                 <!-- 第一行右欄：Email -->
                 <td>
-                  <span class="label">聯絡信箱 Contact Email</span
-                  ><br />damin@gmail.com
+                  <span class="label">聯絡信箱 Contact Email</span><br /><span
+                    id="contact-email"
+                    >damin@gmail.com</span
+                  >
                 </td>
               </tr>
               <tr>
                 <td>
-                  <span class="label">聯絡電話 Contact Phone</span
-                  ><br />(+31)0923485729
+                  <span class="label">聯絡電話 Contact Phone</span><br /><span
+                    id="contact-phone"
+                    >(+31)0923485729</span
+                  >
                 </td>
               </tr>
               <tr>
                 <td>
                   <span class="label">Website</span><br />
-                  https://www.nowplacesf.com/publications
+                  <span id="website"
+                    >https://www.nowplacesf.com/publications</span
+                  >
                 </td>
                 <td>
                   <span class="label">Instagram</span><br />
-                  https://www.instagram.com/robot.ocean/
+                  <span id="instagram"
+                    >https://www.instagram.com/robot.ocean/</span
+                  >
                 </td>
               </tr>
               <tr>
                 <td>
                   <span class="label">Facebook</span><br />
-                  <i style="color: lightgray">None</i>
+                  <i style="color: lightgray" id="facebook">None</i>
                 </td>
                 <td>
                   <span class="label">Whatsapp</span><br />
-                  <i style="color: lightgray">None</i>
+                  <i style="color: lightgray" id="whatsapp">None</i>
                 </td>
               </tr>
             </table>
@@ -215,7 +235,9 @@
                         <span class="label">報名編號 Application Number</span
                         ><br />
                         <div>
-                          <span style="font-size: 3rem">25-BC001</span>
+                          <span style="font-size: 3rem" id="application-number"
+                            >25-BC001</span
+                          >
                         </div>
                       </td>
 
@@ -232,7 +254,9 @@
                               padding: 0px 10px 0px 10px;
                               background-color: lime;
                             "
+                            id="application-result"
                             >錄取</span
+                          >
                           >
                         </div>
                       </td>
@@ -242,8 +266,11 @@
                         <span class="label">報名狀態 Registration Status</span
                         ><br />
                         <div style="vertical-align: middle; font-size: 2.7rem">
-                          <span style="font-size: 2rem; color: black"
+                          <span
+                            style="font-size: 2rem; color: black"
+                            id="registration-status"
                             >尚未完成報名</span
+                          >
                           >
                         </div>
                       </td>
@@ -268,6 +295,7 @@
                       >
                         <span class="label">攤種 Booth Type</span><br /><span
                           style="font-size: 2rem"
+                          id="booth-type"
                           >創作商品攤</span
                         >
                         <hr
@@ -285,10 +313,14 @@
                             padding-left: 0em;
                           "
                         >
-                          <li>– 桌面<small>(120×60cm)</small> ×1</li>
-                          <li>– 椅子 ×2</li>
-                          <li>– 工作證 ×2</li>
-                          <li>– 草率簿 ×1<small> (含露出一面)</small></li>
+                          <li id="equipment-table">
+                            – 桌面<small>(120×60cm)</small> ×1
+                          </li>
+                          <li id="equipment-chair">– 椅子 ×2</li>
+                          <li id="equipment-badge">– 工作證 ×2</li>
+                          <li id="equipment-book">
+                            – 草率簿 ×1<small> (含露出一面)</small>
+                          </li>
                         </ul>
                       </td>
 
@@ -335,17 +367,21 @@
                                   border-bottom: none;
                                 "
                               />
-                              <span style="font-size: 2rem">8,000 NTD </span
+                              <span style="font-size: 2rem" id="billing1-price"
+                                >8,000 NTD </span
                               ><small>(含稅)</small>
                               <br />
                               僅基礎方案
-                              <p style="color: red; font-size: 12px">
+                              <p
+                                style="color: red; font-size: 12px"
+                                id="billing1-note"
+                              >
                                 ！請在付款時務必填入以下資料：<br />
                                 Email: email@gmail.com<br />
                                 備註欄位: 25-BC001<br /><br />
                                 如因填寫其他錯誤資料造成對帳問題，將導致報名失敗。
                               </p>
-                              <div class="pay-button">付款 Pay</div>
+                              <div class="pay-button" id="pay1">付款 Pay</div>
                             </td>
                             <td
                               style="
@@ -364,16 +400,20 @@
                                   border-bottom: none;
                                 "
                               />
-                              <span style="font-size: 2rem">13,000 NTD </span
+                              <span style="font-size: 2rem" id="billing2-price"
+                                >13,000 NTD </span
                               ><small>(含稅)</small><br />
                               適合有輪班擺攤需求之攤主
-                              <p style="color: red; font-size: 12px">
+                              <p
+                                style="color: red; font-size: 12px"
+                                id="billing2-note"
+                              >
                                 ！請在付款時務必填入以下資料：<br />
                                 Email: email@gmail.com<br />
                                 備註欄位: 25-BC001<br /><br />
                                 如因填寫其他錯誤資料造成對帳問題，將導致報名失敗。
                               </p>
-                              <div class="pay-button">付款 Pay</div>
+                              <div class="pay-button" id="pay2">付款 Pay</div>
                             </td>
                           </tr>
                         </table>
@@ -393,11 +433,11 @@
                       >
                         <span class="label">注意事項 Notice</span><br />
                         <ul style="margin: 0; padding-left: 20px">
-                          <li>
+                          <li id="notice1">
                             請自行評估需求繳費，繳款後我們不再提供更改申請選項。
                           </li>
-                          <li>付款之後請自行留存發票。</li>
-                          <li>
+                          <li id="notice2">付款之後請自行留存發票。</li>
+                          <li id="notice3">
                             我們將於 7 月 15 日對帳後更新報名以及付款狀態。
                           </li>
                         </ul>
@@ -413,32 +453,32 @@
                   <table style="width: 100%; margin-top: 10px">
                     <tr>
                       <td>
-                        <span class="rotated"
+                        <span class="rotated" id="schedule-announce"
                           >徵件開始<br />Open Call Announce</span
                         >
                       </td>
                       <td>
-                        <span class="rotated"
+                        <span class="rotated" id="schedule-out"
                           >徵件結束<br />Open Call is out</span
                         >
                       </td>
                       <td>
-                        <span class="rotated"
+                        <span class="rotated" id="schedule-result"
                           >錄取結果出爐<br />Open Call Result</span
                         >
                       </td>
                       <td>
-                        <span class="rotated"
+                        <span class="rotated" id="schedule-update"
                           >報名狀態更新後聯繫確認<br />Application status
                           update</span
                         >
                       </td>
                     </tr>
                     <tr>
-                      <td>05/01</td>
-                      <td>06/15</td>
-                      <td>06/30</td>
-                      <td>06/30</td>
+                      <td id="schedule-date-announce">05/01</td>
+                      <td id="schedule-date-out">06/15</td>
+                      <td id="schedule-date-result">06/30</td>
+                      <td id="schedule-date-update">06/30</td>
                     </tr>
                   </table>
                 </td>
