--- a/localapplication.html
+++ b/localapplication.html
@@ -701,7 +701,7 @@
         <!--Password-->
         <div class="column">
           <span class="from-header">登錄密碼</span>
-          此登錄密碼將作為日後註冊、查詢帳號之使用，<strong>一旦提交將不提供修改及調整，</strong>若重複報名將第一次輸入密碼為主。
+          此登錄密碼將作為日後註冊、查詢帳號之使用，<strong>一旦提交將不提供修改及調整，</strong>若重複報名將後輸入密碼為主。
         </div>
         <div class="column layout-form-column-grid-1">
           <span class="from-description-header-ness">必填問題</span>
