--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -898,8 +898,7 @@
           <span class="from-header">Login Password</span>
           This password will be use for the registration of website accounts.
           <strong>Once registered, it cannot be modified.</strong> If you
-          registered multiple times, we will used the first password you
-          entered.
+          registered multiple times, we will used the last password you entered.
         </div>
         <div class="column layout-form-column-grid-1">
           <span class="from-description-header-ness">Required Question</span>
