nationality content fix

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -35,6 +35,7 @@
             <img
               src="image/icon-1.ico"
               alt="logo"
+              class="machine-rotate-logo"
               style="width: 4.5vw; height: auto; transform: rotate(45deg)"
             />
           </p>
@@ -146,7 +147,7 @@
                       >
                         <span class="label">國籍 Nationality</span><br /><span
                           id="nationality"
-                          >JAPAN</span
+                          >JP</span
                         >
                       </td>
                       <td
@@ -257,7 +258,6 @@
                             id="application-result"
                             >錄取</span
                           >
-                          >
                         </div>
                       </td>
 
@@ -270,7 +270,6 @@
                             style="font-size: 2rem; color: black"
                             id="registration-status"
                             >尚未完成報名</span
-                          >
                           >
                         </div>
                       </td>
@@ -373,15 +372,41 @@
                               <br />
                               僅基礎方案
                               <p
-                                style="color: red; font-size: 12px"
-                                id="billing1-note"
+                                style="color: red; font-size: 0.9rem"
+                                id="billing2-note"
                               >
                                 ！請在付款時務必填入以下資料：<br />
-                                Email: email@gmail.com<br />
-                                備註欄位: 25-BC001<br /><br />
-                                如因填寫其他錯誤資料造成對帳問題，將導致報名失敗。
+                                Email:
+                                <span
+                                  id="billing-email"
+                                  style="font-weight: bold"
+                                  >email@gmail.com</span
+                                ><button
+                                  class="copy-btn"
+                                  onclick="copyToClipboard('billing-email')"
+                                  title="Copy Email"
+                                  style="margin-left: 5px"
+                                >
+                                  📋</button
+                                ><br />
+                                備註欄位:
+                                <span
+                                  id="billing-application-number"
+                                  style="font-weight: bold"
+                                  >25-BC001</span
+                                ><button
+                                  class="copy-btn"
+                                  onclick="copyToClipboard('billing-application-number')"
+                                  title="Copy Application Number"
+                                  style="margin-left: 5px"
+                                >
+                                  📋</button
+                                ><br /><br />
+                                <b
+                                  >如因填寫其他錯誤資料造成對帳問題，將導致報名失敗。</b
+                                >
                               </p>
-                              <div class="pay-button" id="pay1">付款 Pay</div>
+                              <div class="pay-button" id="pay2">付款 Pay</div>
                             </td>
                             <td
                               style="
@@ -405,7 +430,7 @@
                               ><small>(含稅)</small><br />
                               適合有輪班擺攤需求之攤主
                               <p
-                                style="color: red; font-size: 12px"
+                                style="color: red; font-size: 0.9rem"
                                 id="billing2-note"
                               >
                                 ！請在付款時務必填入以下資料：<br />
@@ -458,12 +483,22 @@
                         "
                       >
                         <span class="label">注意事項 Notice</span><br />
-                        <ul style="margin: 0; padding-left: 20px">
+                        <ul
+                          style="
+                            margin: 0;
+                            padding-left: 20px;
+                            font-size: 0.8rem;
+                          "
+                        >
                           <li id="notice1">
                             請自行評估需求繳費，繳款後我們不再提供更改申請選項。
                           </li>
-                          <li id="notice2">付款之後請自行留存發票。</li>
-                          <li id="notice3">
+                          <li id="notice2">
+                            每攤限加購 1 張工作證，如需更多數量請買當日票入場。
+                          </li>
+
+                          <li id="notice3">付款之後請自行留存發票。</li>
+                          <li id="notice4">
                             我們將於 7 月 15 日對帳後更新報名以及付款狀態。
                           </li>
                         </ul>
