fixing the require q

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -108,27 +108,15 @@
                 <td colspan="2">
                   <span class="label">品牌簡介 Bio</span><br />
                   <div class="bio" id="bio">
-                    Yoshimi Saito is a Japanese artist and ceramicist. She is
-                    known for her unique approach to ceramics, which combines
-                    traditional techniques with a contemporary aesthetic. Her
-                    work often explores themes of nature, mythology, and the
-                    human experience, resulting in pieces that are both visually
-                    striking and thought-provoking. Born in Tokyo, currently
-                    based in Takanabe, in the southern region of Japan. After
-                    graduating from the Ceramic Art Course at Kyoto University
-                    of the Arts, I expanded my artistic practice to include clay
-                    sculpting, along with drawing on paper. In 2022, during an
-                    artist residency in Iceland, I created and exhibited a
-                    series of ceramic works titled Huldufólk. My recent
-                    activities include the solo exhibition Soft Wind (Kinkan
-                    Gallery, 2025), as well as starring in and contributing
-                    artworks to the short film Yume No Hate Made (Till the End
-                    of the World), directed by Natsuka Kusano, part of the
-                    omnibus film Performing Hiroshima (2023). At the Taipei Art
-                    Book Fair, I will present a new zine featuring recent works
-                    created in Takanabe, the town I recently moved to. Through
-                    this publication, I hope to share the unique charm and
-                    appeal of Takanabe with a wider audience.
+                    "We are a group of four former classmates from art
+                    university, each bringing our unique personalities to zines
+                    filled with photography, writing, and original artworks.
+                    It’s been three years since we graduated, and during that
+                    time, each of us has been immersed in our own paths and
+                    creative pursuits. Now, we’re coming together again in
+                    Taipei—the place we once visited on our graduation
+                    trip—hoping to reconnect through zines with fellow lovers of
+                    design and art. Nothing would make us happier."
                   </div>
                 </td>
               </tr>
