--- a/application-received.html
+++ b/application-received.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; 
+             script-src 'self' 'unsafe-inline' https://www.google.com https://www.gstatic.com https://code.jquery.com https://www.googletagmanager.com; 
+             style-src 'self' 'unsafe-inline'; 
+             connect-src https://www.google-analytics.com;
+             frame-src https://www.google.com;"
+    />
+
     <title>申請成功 - 草率季Taipei Art Book Fair</title>
     <link rel="shortcut icon" href="image/icon-1.ico" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/font.css" />
-
-    <!-- jquery這裡 -->
-    <script src="jquery-ui-1.14.1/external/jquery/jquery.js"></script>
-    <link
-      rel="stylesheet"
-      href="jquery-ui-1.14.1/themes/smoothness/jquery-ui.css"
-    />
-    <script src="jquery-ui-1.14.1/jquery-ui.js"></script>
 
     <!-- Google tag (gtag.js) -->
     <script
