--- a/application-received.html
+++ b/application-received.html
@@ -6,10 +6,10 @@
     <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; 
-             script-src 'self' 'unsafe-inline' https://www.google.com https://www.gstatic.com https://code.jquery.com https://www.googletagmanager.com; 
-             style-src 'self' 'unsafe-inline'; 
-             connect-src https://www.google-analytics.com;
-             frame-src https://www.google.com;"
+         script-src 'self' 'unsafe-inline' https://www.google.com https://www.gstatic.com https://code.jquery.com https://www.googletagmanager.com; 
+         style-src 'self' 'unsafe-inline'; 
+         connect-src https://www.google-analytics.com https://script.google.com;
+         frame-src https://www.google.com;"
     />
 
     <title>申請成功 - 草率季Taipei Art Book Fair</title>
