--- a/index-logingtryout.html
+++ b/index-logingtryout.html
@@ -17,10 +17,10 @@ font in use: Poppins, PicNic, and Inclusive Sans -->
     <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; 
-             script-src 'self' 'unsafe-inline' https://www.google.com https://www.gstatic.com https://code.jquery.com https://www.googletagmanager.com; 
-             style-src 'self' 'unsafe-inline'; 
-             connect-src https://www.google-analytics.com;
-             frame-src https://www.google.com;"
+         script-src 'self' 'unsafe-inline' https://www.google.com https://www.gstatic.com https://code.jquery.com https://www.googletagmanager.com; 
+         style-src 'self' 'unsafe-inline'; 
+         connect-src https://www.google-analytics.com https://script.google.com;
+         frame-src https://www.google.com;"
     />
 
     <title>草率季Taipei Art Book Fair</title>
