--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -94,21 +94,19 @@
                   >
 
                   <span class="label">品牌名稱 Brand Name</span><br />
-                  <span style="font-size: 3rem" id="brand-name"
-                    >Yoshimi Saito</span
-                  >
+                  <span style="font-size: 3rem" id="brand-name">草率</span>
                 </td>
               </tr>
               <tr>
                 <td style="width: 50%">
                   <span class="label">身份類別 Role</span><br /><span id="role"
-                    >a1 Creator</span
+                    >t0 Organizer</span
                   >
                 </td>
                 <td style="width: 50%">
                   <span class="label">作品類別 Category</span><br /><span
                     id="category"
-                    >b3 Drawings</span
+                    >t0 book fair</span
                   >
                 </td>
               </tr>
@@ -116,15 +114,9 @@
                 <td colspan="2">
                   <span class="label">品牌簡介 Bio</span><br />
                   <div class="bio" id="bio">
-                    "We are a group of four former classmates from art
-                    university, each bringing our unique personalities to zines
-                    filled with photography, writing, and original artworks.
-                    It’s been three years since we graduated, and during that
-                    time, each of us has been immersed in our own paths and
-                    creative pursuits. Now, we’re coming together again in
-                    Taipei—the place we once visited on our graduation
-                    trip—hoping to reconnect through zines with fellow lovers of
-                    design and art. Nothing would make us happier."
+                    草率季」是臺灣大型藝術書刊的文化市集，也是臺灣首度串連各種理念的創作者、出版社、獨立書店、藝術家等的市集，展出各式畫冊、獨立刊物、藝術雜誌等特色刊物。臺灣目前正在形成在地文化底蘊的背景下，這份狂野與不確定性的特質，吸引了亞洲如韓國、日本等藝術創作者前來共襄盛舉，草率季漸漸成為臺灣與國際間出版連結的大型藝術書刊市集。從
+                    2016
+                    第一屆草率季開始，每年都規劃不同主題、廣邀國內外各領域藝文創作者，提供各個參展單位表達自我與理想的交流平台。
                   </div>
                 </td>
               </tr>
@@ -169,7 +161,7 @@
                   <span class="label">代表人 Contact Person</span><br />
                   <div style="vertical-align: middle; font-size: 3rem">
                     <span style="font-size: 2rem" id="contact-person"
-                      >王大明</span
+                      >黃偉倫</span
                     >
                   </div>
                 </td>
@@ -178,7 +170,7 @@
                 <td>
                   <span class="label">聯絡信箱 Contact Email</span><br /><span
                     id="contact-email"
-                    >damin@gmail.com</span
+                    >something@double-grass.com</span
                   >
                 </td>
               </tr>
@@ -193,14 +185,12 @@
               <tr>
                 <td>
                   <span class="label">Website</span><br />
-                  <span id="website"
-                    >https://www.nowplacesf.com/publications</span
-                  >
+                  <span id="website">www.website.com</span>
                 </td>
                 <td>
                   <span class="label">Instagram</span><br />
                   <span id="instagram"
-                    >https://www.instagram.com/robot.ocean/</span
+                    >https://www.instagram.com/double-grass/</span
                   >
                 </td>
               </tr>
@@ -233,7 +223,7 @@
                         ><br />
                         <div>
                           <span style="font-size: 3rem" id="application-number"
-                            >25-BC001</span
+                            >25-TP001</span
                           >
                         </div>
                       </td>
