eyeball code back

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -539,5 +539,6 @@
       </tr>
     </table>
     <script src="js/nationality.js"></script>
+    <script src="js/dashboard-body.js"></script>
   </body>
 </html>
