--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -34,6 +34,10 @@
     <script src="js/dashboard-basic.js"></script>
   </head>
   <body>
+    <div id="loading-mask">
+      <div class="loading-grid"></div>
+      <div class="loading-percent" id="loading-percent">0%</div>
+    </div>
     <table class="layout">
       <tr>
         <!-- Sidebar -->
